@@ -51,6 +51,7 @@ Broker:
   immediately when parsing the config file in order to detect invalid hosts.
 - Bridges now set their notification state before attempting to connect, so if
   they fail to connect the state can still be seen.
+- Bridge connections are now made with non-blocking sockets.
 - If a client connects with a will topic to which they do not have write
   access, they are now disconnected with CONNACK "not authorised".
 - Fix bridge notification payload length - no need to send a null byte.
@@ -59,6 +60,8 @@ Broker:
 - Fix handling of SSL errors on SSL_accept().
 
 Client library:
+- Add mosquitto_reconnect_async() support and make asynchronous connections
+  truely asynchronous rather than simply deferred.
 - Allow control of reconnection timeouts in mosquitto_loop_forever() and after
   mosquitto_loop_start() by using mosquitto_reconnect_delay_set().
 - Fix building on Android NDK.
